# immix

./: CMakeLists.txt
.cache/clangd/index/: Bitmap.c.56FDA2528A69748B.idx  Bitmap.h.26C8A79E9C7505C7.idx  Block.c.CBCA409DBD571332.idx  Block.h.9367C7FC7D10FF8E.idx  BlockHeader.h.48086774F02F1BB1.idx  BlockList.c.EFCD8B73D55C95F4.idx  BlockList.h.642F908C8C42F6E7.idx  Constants.h.3B1E4354ADEA6451.idx  GCTypes.h.86A3F31EF338D3CC.idx  GlobalBlockAllocator.cpp.861D21507FF90BC7.idx  GlobalBlockAllocator.h.E3C32061EF72941C.idx  GlobalLargeAllocator.cpp.36B14C9706AD714D.idx  GlobalLargeAllocator.h.3BFC9790C14CDB5E.idx  Heap.c.AF1E43CDBA1E58F8.idx  Heap.h.FBC3C84463A8CE00.idx  ImmixGC.c.83042DEA31C2CB3B.idx  (+26 more)
documentation/: Block.md  Constants.md  GCTypes.md  Heap.md  ImmixGC.md  LargeAllocator.md  Line.md  README.md  State.md  ThreadLocalAllocator.md
documentation/concurrent/: GlobalBlockAllocator.md  GlobalLargeAllocator.md  MutatorSync.md  MutatorThread.md  ValStack.md
documentation/headers/: BlockHeader.md  LineHeader.md  ObjectHeader.md
src/: Allocator.c  Allocator.h  Block.c  Block.h  Constants.h  GCTypes.h  Heap.c  Heap.h  ImmixGC.c  ImmixGC.h  LargeAllocator.c  LargeAllocator.h  Line.h  Marker.c  Object.c  Object.h  StackTrace.h  StackoverflowHandler.c  State.c  State.h  ThreadLocalAllocator.c  ThreadLocalAllocator.h
src/concurrent/: GlobalBlockAllocator.cpp  GlobalBlockAllocator.h  GlobalLargeAllocator.cpp  GlobalLargeAllocator.h  MutatorSync.cpp  MutatorSync.h  MutatorThread.h  ValStack.h
src/datastructures/: Bitmap.c  Bitmap.h  BlockList.c  BlockList.h
src/headers/: BlockHeader.h  ObjectHeader.h
src/utils/: MathUtils.h
